[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/ComplexDT.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/TebengeMenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/DoubleDeckerButtonsDT.gd" type="Script" id=3]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/TebengeLabel.tscn" type="PackedScene" id=4]

[node name="DoubleDeckerButtonsDT" instance=ExtResource( 1 )]
margin_right = 321.0
margin_bottom = 258.0
script = ExtResource( 3 )
title = "Double Decker Buttons"
buttonSays = PoolStringArray( "Button A", "Button B" )
buttonTips = PoolStringArray( "", "" )
buttonIcons = [ null, null ]

[node name="DeckerName" parent="." index="0" instance=ExtResource( 4 )]
margin_right = 321.0
margin_bottom = 50.0
text = "Double Decker Buttons"

[node name="MenuButtonA" parent="." index="1" instance=ExtResource( 2 )]
margin_top = 54.0
margin_right = 321.0
margin_bottom = 154.0
rect_min_size = Vector2( 300, 25 )
size_flags_vertical = 3
text = "Button A"

[node name="MenuButtonB" parent="." index="2" instance=ExtResource( 2 )]
margin_top = 158.0
margin_right = 321.0
margin_bottom = 258.0
rect_min_size = Vector2( 300, 25 )
size_flags_vertical = 3
text = "Button B"
